--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   },
   "homepage": "https://github.com/xcidic/bookmark-api#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.4",
-    "helmet": "^3.15.0",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.3.13",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "got": "^10.2.2",
+    "helmet": "^3.21.2",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.8.9",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "nodemon": "^2.0.2"
   }
 }
