--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookmark-api",
+  "name": "apicollections",
   "version": "1.0.0",
   "description": "RESTful API for Bookmark App",
   "main": "index.js",
@@ -32,5 +32,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
